--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"aPZ4N":"/blue_logo.ece4af23.png","d4qFk":"/blog39.bcfb6a7f.png","hYnqu":"/logo.b833cfe0.svg"}}</script><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Web_page</title><link href=/Assignment_Front_end.a0477c67.css rel=stylesheet><body>
+<!DOCTYPE html><html lang=en><script type=importmap>{"imports":{"4Kyme":"/logo.b833cfe0.svg","fkmeH":"/blog39.bcfb6a7f.png","itgJ6":"/blue_logo.ece4af23.png"}}</script><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Web_page</title><link href=/Assignment_Front_end.f88a6f68.css rel=stylesheet><body>
     <div id=root></div>
-    <script type=module src=/Assignment_Front_end.e33167a5.js></script>
+    <script type=module src=/Assignment_Front_end.8c8c03c6.js></script>
   
 
